[gd_scene load_steps=5 format=3 uid="uid://bm54pjlkyc4dj"]

[ext_resource type="Script" path="res://UI/Menu/main_menu.gd" id="1_1d7nq"]
[ext_resource type="Texture2D" uid="uid://bqn0sut1otuak" path="res://UI/Menu/Assets/backgroundImg.jpeg" id="1_ydhws"]
[ext_resource type="AudioStream" uid="uid://b2apnyqeo78i" path="res://UI/Menu/Assets/Retrocardia.wav" id="2_mhu4y"]
[ext_resource type="FontFile" uid="uid://dumwlquk1a56x" path="res://UI/Menu/Assets/Gameplay.ttf" id="3_uqeqw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 2.0
offset_right = 4.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1d7nq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(970, 546)
scale = Vector2(1.09549, 1.07471)
texture = ExtResource("1_ydhws")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -45.0
offset_right = 114.5
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Level" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqeqw")
text = "Play vs computer"

[node name="LevelFriend" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqeqw")
text = "Play vs friend"

[node name="Quiet" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqeqw")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mhu4y")
autoplay = true

[connection signal="pressed" from="VBoxContainer/Level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelFriend" to="." method="_on_level_friend_pressed"]
[connection signal="pressed" from="VBoxContainer/Quiet" to="." method="_on_quiet_pressed"]
